--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <hr>
 
 <footer>
-    © 2025. Виконано студентом.
+    © 2025. Виконано студентом. Савченко Богдан Ігорович. КІУКІу-24-1
 </footer>
 
 </body>
