--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br>
 
 <h2 id="text">1. Оформлений текст</h2>
-<p>Формула перестановок: <b>P</b><sub>n</sub> = 1 &middot; 2 &middot; 3 &middot; ... &middot; <i>n</i>.</p>
+<p>Формула п рестановок: <b>P</b><sub>n</sub> = 1 &middot; 2 &middot; 3 &middot; ... &middot; <i>n</i>.</p>
 <p>Стрілка &rarr;, грецька літера &alpha;, кутові дужки &lt; і &gt;.</p>
 <p>Підносимо до степеня: <b>a</b><sup>2</sup> + <b>b</b><sub>3</sub>.</p>
 
